--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974">+7 (499) 922-89-74</a>
-                    <button class="button">заказать звонок</button>
+                    <button data-modal="consultation" class="button">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -43,8 +43,8 @@
                         Ответим<br> на все вопросы
                     </div>
                 </div>
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
-                <div class="promo__link">или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a></div>
+                <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">или <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a></div>
             </div>
         </div>
     </section>
@@ -97,7 +97,7 @@
             </div>
         </div>
     </section>
-    <section class="catalog">
+    <section class="catalog" id="catalog">
         <div class="container">
             <h2 class="title_small">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
@@ -141,7 +141,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -159,7 +159,7 @@
                             <div class="catalog-item__old-price">6 690 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>         
                         </div>
-                        <button class="button button__mini">КУПИТЬ</button>
+                        <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -216,7 +216,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -241,7 +241,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content  catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Polar FT4</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -266,76 +266,79 @@
             <div class="catalog__content">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
-                            <hr>
-                            <div class="catalog-item__footer ">
-                                <div class="catalog-item__prices">
-                                    <div class="catalog-item__old-price">4 750 руб</div>
-                                    <div class="catalog-item__price">4 500 руб.</div>         
-                                </div>
-                                <button class="button button_mini">КУПИТЬ</button>
-                            </div>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <ul class="catalog-item__list">
                             <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                             <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                             <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                             <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">назад</a>
                         </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer ">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб</div>
+                            <div class="catalog-item__price">4 500 руб.</div>         
+                        </div>
+                        <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
             </div>
             <div class="catalog__content">
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
-                            <hr>
-                            <div class="catalog-item__footer ">
-                                <div class="catalog-item__prices">
-                                    <div class="catalog-item__old-price">4 750 руб</div>
-                                    <div class="catalog-item__price">4 500 руб.</div>         
-                                </div>
-                                <button class="button button_mini">КУПИТЬ</button>
-                            </div>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <ul class="catalog-item__list">
                             <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                             <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                             <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                             <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">назад</a>
                         </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer ">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб</div>
+                            <div class="catalog-item__price">4 500 руб.</div>         
+                        </div>
+                        <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
                     <div class="catalog-item__wrapper">
-                        <div class="catalog-item__content">
+                        <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
                             <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
-                            <hr>
-                            <div class="catalog-item__footer ">
-                                <div class="catalog-item__prices">
-                                    <div class="catalog-item__old-price">4 750 руб</div>
-                                    <div class="catalog-item__price">4 500 руб.</div>         
-                                </div>
-                                <button class="button button_mini">КУПИТЬ</button>
-                            </div>
                         </div>
-                        <ul class="catalog-item__list catalog-item__list_active">
+                        <ul class="catalog-item__list">
                             <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
                             <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
                             <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
                             <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog-item__back">назад</a>
                         </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog-item__footer ">
+                        <div class="catalog-item__prices">
+                            <div class="catalog-item__old-price">4 750 руб</div>
+                            <div class="catalog-item__price">4 500 руб.</div>         
+                        </div>
+                        <button class="button button_mini">КУПИТЬ</button>
                     </div>
                 </div>
             </div>
@@ -371,9 +374,52 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.3787080409943!2d37.64608404767216!3d55.76929424393396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1623004582916!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="footer__info">
+            <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+            <a href="tel:+74999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/social/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/social/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/social/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&#10006;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя" type="text">
+                <input name="phone" required type="text" placeholder="Ваш телефон" type="number">
+                <input name="email" required type="text" placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+        <div class="modal" id="order">
+            <div class="modal__close">&#10006;</div>
+            <div class="modal__subtitle">Ваш заказ:</div>
+            <div class="modal__descr">Пульсометр Polar FT1</div>
+            <form class="feed-form" action="#">
+                <input name="name" required type="text" placeholder="Ваше имя" type="text">
+                <input name="phone" required type="text" placeholder="Ваш телефон" type="number">
+                <input name="email" required type="text" placeholder="Ваш E-mail" type="email">
+                <button class="button button_submit">купить</button>
+            </form>
+        </div>
+        <div class="modal modal_mini" id="thanks">
+            <div class="modal__close">&#10006;</div>
+            <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
+        </div>
+    </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
 </body>
 </html>
